/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "org.apache.hadoop.hdds.protocol.proto";
option java_outer_classname = "SCMRatisProtocol";
option java_generate_equals_and_hash = true;

enum RequestType {
    PIPELINE = 1;
    CONTAINER = 2;
    BLOCK = 3;
    SEQUENCE_ID = 4;
    CERT_STORE = 5;
}

message Method {
    required string name = 1;
    repeated MethodArgument args = 2;
}

message MethodArgument {
    required string type = 1;
    required bytes value = 2;
}

message ListArgument {
    required string type = 1;
    repeated bytes value = 2;
}

message SCMRatisRequestProto {
    required RequestType type = 1;
    required Method method = 2;
}

message SCMRatisResponseProto {
    required string type = 2;
    required bytes value = 3;
}
